<resources>
    <!-- Текстовые поля окна авторизации -->
    <string name="app_name">Panda</string>
    <string name="text1">ВХОД В ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="text2">Электронная почта:</string>
    <string name="hintText2">Введите электронная почту</string>
    <string name="text3">Пароль:</string>
    <string name="hintText3">Введите пароль</string>
    <string name="btnEnter">Войти</string>
    <string name="textViewReg">Регистрация</string>

    <!-- Текстовые поля окна регистрации -->
    <string name="regText1">РЕГИСТРАЦИЯ В ЛИЧНОМ КАБИНЕТЕ</string>
    <string name="regText2">Подтверждение пароля:</string>
    <string name="regBtnEnter">Регистрация</string>
    <string name="regTextViewReg">Авторизация</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- Текстовые поля главного окна -->
    <string name="homeText1">Оператор связи &quot;Панда&quot; - это</string>
    <string name="homeText2">Выгодные тарифы</string>
    <string name="homeText3">Еще…</string>
    <string name="homeText4">Множество бесплатных услуг</string>
    <string name="homeText5">Поддержка каждого клиента связи</string>
    <string name="homeText6">Тариф "Все или ничего"</string>
    <string name="tarifHomeText1">Безлимит</string>
    <string name="tarifHomeText2">-на звонки</string>
    <string name="tarifHomeText3">-на мобильный интернет</string>
    <string name="tarifHomeText4">-на сообщения</string>
    <string name="tarifHomeText5">3000 &#8381;/мес.</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Текстовые поля меню -->
    <string name="menu_panda">ПАНДА</string>
    <string name="menu_home">Главная</string>
    <string name="menu_tariffPlans">Тарифные пакеты</string>
    <string name="menu_tariffControl">Управление тарифом</string>
    <string name="menu_profile">Мой профиль</string>
    <string name="menu_exit">Выход</string>

    <!-- Текстовые поля окна тарифных пакетов -->
    <string name="tariff_plans_text1">Тариф месяца</string>
    <string name="tariff_plans_text2">Рекомендуемые тарифы</string>
    <string name="tariff_plans_text11">Тариф &quot;Разговорный&quot;</string>
    <string name="tariff_plans_text12">1210 &#8381;/мес.</string>
    <string name="tariff_plans_text21">Тариф &quot;Интроверт&quot;</string>
    <string name="tariff_plans_text22">560 &#8381;/мес.</string>
    <string name="tariff_plans_text31">Тариф &quot;Хакер&quot;</string>
    <string name="tariff_plans_text32">1590 &#8381;/мес.</string>
    <string name="tariff_plans_text41">Тариф &quot;Для всех и каждого&quot;</string>
    <string name="tariff_plans_text42">750 &#8381;/мес.</string>

    <string name="tariff_control_text1">Мой баланс</string>
    <string name="tariff_control_text2">12540 &#8381;</string>
    <string name="tariff_control_text3">Пополнить</string>
    <string name="tariff_control_text4">Мои тарифы</string>

    <string name="profile_text1">Основная информация</string>
    <string name="profile_text21">Фамилия:</string>
    <string name="profile_text22">Замыцкий</string>
    <string name="profile_text23">Введите фамилию</string>
    <string name="profile_text31">Имя:</string>
    <string name="profile_text32">Илья</string>
    <string name="profile_text33">Введите имя</string>
    <string name="profile_text41">Отчество:</string>
    <string name="profile_text42">Сергеевич</string>
    <string name="profile_text43">Введите отчество</string>
    <string name="profile_text51">Возраст:</string>
    <string name="profile_text52">21</string>
    <string name="profile_text53">Введите возраст</string>
    <string name="profile_text61">Номер телефона:</string>
    <string name="profile_text62">79008765432</string>
    <string name="profile_text63">Введите номе телефона</string>
    <string name="profile_text71">Электронная почта:</string>
    <string name="profile_text72">ilya.zamytskiy@mail.ru</string>
    <string name="profile_text73">Введите адрес электронной почты</string>
    <string name="profile_btn">Редактировать данные</string>
    <string name="form_title">Редактор личной информации</string>

    <string name="dialog_tariff1_text1">Тариф &quot;Все или ничего&quot;</string>
    <string name="dialog_tariff1_text2">Коротко о тарифе</string>
    <string name="dialog_tariff1_text3">-Безлимит на звонки</string>
    <string name="dialog_tariff1_text4">-Безлимит на мобильный интернет</string>
    <string name="dialog_tariff1_text5">-Безлимит на сообщения</string>
    <string name="dialog_tariff1_text6">-Подписка на Яндекс Плюс</string>
    <string name="dialog_tariff1_text7">-Подписка на Telegram Premium</string>
    <string name="dialog_tariff1_btn1">Купить всего за 3000 &#8381;/мес.</string>

    <string name="dialog_tariff2_text1">Тариф &quot;Разговорный&quot;</string>
    <string name="dialog_tariff2_text2">Коротко о тарифе</string>
    <string name="dialog_tariff2_text3">-800 минут на звонки внутри сети</string>
    <string name="dialog_tariff2_text4">-300 минут на звонки в други сети</string>
    <string name="dialog_tariff2_text5">-2ГБ мобильного интернета</string>
    <string name="dialog_tariff2_text6">-150 сообщений</string>
    <string name="dialog_tariff2_text7">-Использование ВКонтакте и Telegram без расходования интернет-трафика</string>
    <string name="dialog_tariff2_btn1">Купить всего за 1210 &#8381;/мес.</string>

    <string name="dialog_tariff3_text1">Тариф &quot;Интроверт&quot;</string>
    <string name="dialog_tariff3_text2">Коротко о тарифе</string>
    <string name="dialog_tariff3_text3">-100 минут на звонки внутри сети</string>
    <string name="dialog_tariff3_text4">-50 минут на звонки в други сети</string>
    <string name="dialog_tariff3_text5">-1ГБ мобильного интернета</string>
    <string name="dialog_tariff3_text6">-50 сообщений</string>
    <string name="dialog_tariff3_text7">-Использование WhatsApp и Viber без расходования интернет-трафика</string>
    <string name="dialog_tariff3_btn1">Купить всего за 560 &#8381;/мес.</string>

    <string name="dialog_tariff4_text1">Тариф &quot;Хакер&quot;</string>
    <string name="dialog_tariff4_text2">Коротко о тарифе</string>
    <string name="dialog_tariff4_text3">-200 минут на звонки внутри сети</string>
    <string name="dialog_tariff4_text4">-100 минут на звонки в други сети</string>
    <string name="dialog_tariff4_text5">-50ГБ мобильного интернета</string>
    <string name="dialog_tariff4_text6">-50 сообщений</string>
    <string name="dialog_tariff4_text7">-Использование Telegram без расходования интернет-трафика</string>
    <string name="dialog_tariff4_btn1">Купить всего за 1590 &#8381;/мес.</string>

    <string name="dialog_tariff5_text1">Тариф &quot;Для всех и каждого&quot;</string>
    <string name="dialog_tariff5_text2">Коротко о тарифе</string>
    <string name="dialog_tariff5_text3">-500 минут на звонки внутри сети</string>
    <string name="dialog_tariff5_text4">-200 минут на звонки в други сети</string>
    <string name="dialog_tariff5_text5">-20ГБ мобильного интернета</string>
    <string name="dialog_tariff5_text6">-100 сообщений</string>
    <string name="dialog_tariff5_btn1">Купить всего за 750 &#8381;/мес.</string>
    <string name="dialog_form_btn_save">Сохранить данные</string>
    <string name="dialog_exit_text">Вы уверены что хотитет выйти?</string>
    <string name="dialog_exit_ok">Да</string>
    <string name="dialog_exit_cancel">Нет</string>
    <string name="homeImageDescr">Множество бесплатных услуг</string>
</resources>