<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobileapppanda.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tariffPlans"
        android:name="com.example.mobileapppanda.ui.tariffPlans.TariffPlansFragment"
        android:label="@string/menu_tariffPlans"
        tools:layout="@layout/fragment_tariff_plans" />

    <fragment
        android:id="@+id/nav_tariffControl"
        android:name="com.example.mobileapppanda.ui.tariffControl.TariffControlFragment"
        android:label="@string/menu_tariffControl"
        tools:layout="@layout/fragment_tariff_control" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mobileapppanda.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.mobileapppanda.ui.exit.ExitFragment"
        tools:layout="@layout/fragment_exit" />
</navigation>