<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        tools:context=".ui.profile.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="180sp"
                android:layout_marginTop="40sp"
                android:src="@drawable/avatar"
                app:civ_border_color="@color/black"
                app:civ_border_width="5dp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="10sp"
                android:background="@color/primary"
                android:fontFamily="@font/roboto_medium"
                android:padding="8sp"
                android:text="@string/profile_text1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:layout_weight="40"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text21"
                    android:textColor="@color/textTarif"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvName1"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text22"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:layout_weight="40"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text31"
                    android:textColor="@color/textTarif"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvName2"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text32"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:layout_weight="40"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text41"
                    android:textColor="@color/textTarif"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvName3"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text42"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:layout_weight="40"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text51"
                    android:textColor="@color/textTarif"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text52"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:layout_weight="40"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text61"
                    android:textColor="@color/textTarif"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvTelephone"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text62"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:inputType="phone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:layout_weight="40"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text71"
                    android:textColor="@color/textTarif"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_text72"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

                <Button
                    android:id="@+id/show_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginBottom="30sp"
                    android:backgroundTint="@color/primary"
                    android:background="@drawable/btn_radius"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/profile_btn"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


        </LinearLayout>
    </FrameLayout>
</ScrollView>