<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.MobileAppPanda">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="8sp"
                    android:text="@string/dialog_tariff5_text1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/dialog_tariff5_text2"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginTop="10sp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/dialog_tariff5_text3"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginTop="10sp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/dialog_tariff5_text4"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginTop="10sp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/dialog_tariff5_text5"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginTop="10sp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/dialog_tariff5_text6"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_buy_tariff5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10sp"
                        android:layout_marginVertical="30sp"
                        android:background="@drawable/btn_radius"
                        android:text="@string/dialog_tariff5_btn1"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>