<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/homeText1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@color/primary"
            android:fontFamily="@font/roboto_medium"
            android:padding="8sp"
            android:text="@string/homeText2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="20sp"
            app:cardCornerRadius="7sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="8sp"
                    android:text="@string/homeText6"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="10sp"
                        android:paddingTop="5sp"
                        android:paddingRight="25sp">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/tarifHomeText1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/tarifHomeText2"
                            android:textAlignment="center"
                            android:textColor="@color/textTarif"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/tarifHomeText3"
                            android:textAlignment="center"
                            android:textColor="@color/textTarif"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:layout_marginBottom="10sp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/tarifHomeText4"
                            android:textAlignment="center"
                            android:textColor="@color/textTarif"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/view1"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"></View>

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:padding="8sp"
                        android:rotation="45"
                        android:text="@string/tarifHomeText5"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

<!--        <TextView-->
<!--            android:id="@+id/goToTariffPlans"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="10sp"-->
<!--            android:clickable="true"-->
<!--            android:onClick="goToTariffPlans"-->
<!--            android:fontFamily="@font/roboto_medium"-->
<!--            android:text="@string/homeText3"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="18sp" />-->

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:background="@color/primary"
            android:fontFamily="@font/roboto_medium"
            android:padding="8sp"
            android:text="@string/homeText4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="20sp"
            android:src="@drawable/tarif">

        </ImageView>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@color/primary"
            android:fontFamily="@font/roboto_medium"
            android:padding="8sp"
            android:text="@string/homeText5"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>